# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace.package]
authors = ["Apache Fluss <dev@fluss.apache.org>"]
categories = ["api-bindings", "database"]
description = "The rust implementation of fluss"
edition = "2024"
homepage = "https://fluss.apache.org/"
license = "Apache-2.0"
repository = "https://github.com/apache/fluss-rust"
rust-version = "1.85"
version = "0.1.0"
keywords = ["fluss", "streaming-storage", "datalake"]

[workspace]
resolver = "2"
members = ["crates/fluss", "crates/examples", "bindings/python", "bindings/cpp"]

[workspace.dependencies]
fluss = { package = "fluss-rs", version = "0.1.0", path = "crates/fluss", features = ["storage-all"] }
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
arrow = { version = "57.0.0", features = ["ipc_compression"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opendal = "0.53"
jiff = { version = "0.2" }
